--- a/index.html
+++ b/index.html
@@ -127,20 +127,20 @@
   <body>
     <header>
       <h1>
-        <small>Assignment 4</small>
+        <small>Project 2</small>
         Persuasive or Deceptive Visualization?
       </h1>
-      <p><strong>Your Name</strong> — <em>Your UCSD Email Address</em></p>
+      <p><strong>Gabrielle Despaigne</strong> — <em>gdespaigne@ucsd.edu</em></p>
     </header>
 
     <main>
-      <h2>Proposition: [STATE PROPOSITION]</h2>
+      <h2>Proposition: The New York Police Department has historically used excessive force and violence that is racially motivated.</h2>
 
       <section>
         <h3>FOR the Proposition</h3>
 
         <figure>
-          <img src="IMAGE_FILENAME" alt="" />
+          <img src="/figure1.png" alt="" />
           <figcaption>BRIEF CAPTION HERE.</figcaption>
         </figure>
 
