--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h3>FOR the Proposition</h3>
 
         <figure>
-          <img src="/figure1.png" alt="" />
+          <img src="figure1.png" alt="" />
           <figcaption>BRIEF CAPTION HERE.</figcaption>
         </figure>
 
