--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h3>FOR the Proposition</h3>
 
         <figure>
-          <img src="figure1.png" alt="" />
+          <img src="figure1.png" alt="Plot 1" />
           <figcaption>BRIEF CAPTION HERE.</figcaption>
         </figure>
 
@@ -156,7 +156,7 @@
         <h3>AGAINST the Proposition</h3>
 
         <figure>
-          <img src="IMAGE_FILENAME" alt="" />
+          <img src="figure2.png" alt="Plot 2" />
           <figcaption>BRIEF CAPTION HERE.</figcaption>
         </figure>
 
