--- a/index.html
+++ b/index.html
@@ -141,14 +141,21 @@
 
         <figure>
           <img src="figure1.png" alt="Plot 1" />
-          <figcaption>BRIEF CAPTION HERE.</figcaption>
+          <figcaption>Gun Violence by NYPD is Racially Motivated</figcaption>
         </figure>
 
         <p>Design Decisions and Rationale:</p>
         <ul>
-          <li>RATIONALE_1</li>
-          <li>RATIONALE_2</li>
-          <li>RATIONALE_3</li>
+          <li>Title and subtitle deliberately used to elicit emotion / outrage (-1.0)</li>
+          <li>Color selected to grab attention. Red used for Black Americans to draw eye immediately to each bar, while White is purposely for contrast. (-1.0)</li>
+          <li>Order of racial groups selected based on weight / percentage overall. Black and Hispanic sit heavy on the bottom. (+0.5)</li>
+          <li>Axis and scale are transparent, showing a normal 0-100% range. (+2.0)</li>
+          <li>Legend is clear and placed on bottom for easy visibility. (+0.5)</li>
+          <li>Source of data is cited at the bottom for transparency. (+1.0)</li>
+          <li>Ommission of baseline values in dataset (i.e. total complaints made) purposeful to make it unclear how much of a disparity exists. User must rely on proportions given. (-1.0)</li>
+          <li>Data presented is normalized instead of using raw counts. This is to allow the user to view proportion of allegations by race made rather than just how many. (+0.5)</li>
+          <li>Data was filtered to only include years ending in even numbers from 2000 - 2018. This was chosen to have the plot look less crowded and "cleaner". (-1.0)</li>
+          <li>Overall score: +0.5</li>
         </ul>
       </section>
 
