--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h3>FOR the Proposition</h3>
 
         <figure>
-          <img src="figure1.png" alt="Plot 1" />
+          <img src="Figure1.png" alt="Plot 1" />
           <figcaption>Gun Violence by NYPD is Racially Motivated</figcaption>
         </figure>
 
