--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         <h3>FOR the Proposition</h3>
 
         <figure>
-          <img src="Figure1.png" alt="Plot 1" />
-          <figcaption>Gun Violence by NYPD is Racially Motivated</figcaption>
+          <img src="figure1.png" alt="Plot 1" />
+          <figcaption>Gun Violence by NYPD is Racially Motivated. Stacked bar plot utilizing color and title to drive point home.</figcaption>
         </figure>
 
         <p>Design Decisions and Rationale:</p>
@@ -151,12 +151,11 @@
           <li>Order of racial groups selected based on weight / percentage overall. Black and Hispanic sit heavy on the bottom. (+0.5)</li>
           <li>Axis and scale are transparent, showing a normal 0-100% range. (+2.0)</li>
           <li>Legend is clear and placed on bottom for easy visibility. (+0.5)</li>
-          <li>Source of data is cited at the bottom for transparency. (+1.0)</li>
-          <li>Ommission of baseline values in dataset (i.e. total complaints made) purposeful to make it unclear how much of a disparity exists. User must rely on proportions given. (-1.0)</li>
+          <li>Source of data is cited at the bottom for transparency. Total complaints per year given for transparency. (+2.0)</li>
           <li>Data presented is normalized instead of using raw counts. This is to allow the user to view proportion of allegations by race made rather than just how many. (+0.5)</li>
           <li>Data was filtered to only include years ending in even numbers from 2000 - 2018. This was chosen to have the plot look less crowded and "cleaner". (-1.0)</li>
-          <li>Overall score: +0.5</li>
         </ul>
+        <br><b>Overall score:</b> +1.5
       </section>
 
       <section>
@@ -164,15 +163,20 @@
 
         <figure>
           <img src="figure2.png" alt="Plot 2" />
-          <figcaption>BRIEF CAPTION HERE.</figcaption>
+          <figcaption>Police Violence In General Is Not Disproportionate by Race. Stacked bar plot shown utilizing cool toned colors.</figcaption>
         </figure>
 
         <p>Design Decisions and Rationale:</p>
         <ul>
-          <li>RATIONALE_1</li>
-          <li>RATIONALE_2</li>
-          <li>RATIONALE_3</li>
+          <li>Neutral title selected purposefully to avoid the assumption of deception. Subtitle transparently informs viewer of normalization to data. (+2.0)</li>
+          <li>Normalization of data intentionally selected so that proportions are viewed overall, the idea is to make each type of violence appear equal weight across racial groups. (+1.0)</li>
+          <li>Native American complaints were excluded from plot due to low counts, thus not representing all data. (-1.0)</li>
+          <li>Categories were grouped together with broad keywords and do not discern every type of allegation included (i.e. if gun drawn was grouped with gun violence OR threat of violence). (-1.0)</li>
+          <li>Missing annotations for some of the bars, intentionally left as-is due to low percentages, but this does cause the viewer to assume the proportion of each bar without a label. (-0.5)</li>
+          <li>Clear source and totals of complaints listed at bottom of the plot. (+1.0)</li>
+          <li>Color selected to elicit a calming affect on viewer, purposely selected similar colors to downplay different categories present. (-0.5)</li>
         </ul>
+        <br><b>Overall score:</b> +1.0
       </section>
 
       <section>
