--- a/index.html
+++ b/index.html
@@ -146,16 +146,15 @@
 
         <p>Design Decisions and Rationale:</p>
         <ul>
-          <li>Title and subtitle deliberately used to elicit emotion / outrage (-1.0)</li>
-          <li>Color selected to grab attention. Red used for Black Americans to draw eye immediately to each bar, while White is purposely for contrast. (-1.0)</li>
-          <li>Order of racial groups selected based on weight / percentage overall. Black and Hispanic sit heavy on the bottom. (+0.5)</li>
-          <li>Axis and scale are transparent, showing a normal 0-100% range. (+2.0)</li>
-          <li>Legend is clear and placed on bottom for easy visibility. (+0.5)</li>
-          <li>Source of data is cited at the bottom for transparency. Total complaints per year given for transparency. (+2.0)</li>
+          <li>Title and subtitle deliberately used to elicit emotion and outrage. I deliberately chose this to grab the viewer's attention and I think it does work for this plot. (-1.0)</li>
+          <li>Color selected to grab attention. Red used for Black Americans to draw eye immediately to each bar, while White Americans is purposely gray for contrast. (-1.0)</li>
+          <li>Order of racial groups selected based on weight and percentage overall. Black and Hispanic sit heavy on the bottom. I feel this was a natural choice based on typical stacked bar plot structure and can be seen as an earnest decision. (+0.5)</li>
+          <li>Axis and scale are transparent, not truncated, showing a normal 0-100% range. This is an earnest decision to appeal to the viewer. (+2.0)</li>
+          <li>Source of data is cited at the bottom for transparency. Total complaints per year given for transparency. I originally omitted both from the plot for aesthetic purposes, but ultimately felt it was needed to gain trust from the viewer.(+2.0)</li>
           <li>Data presented is normalized instead of using raw counts. This is to allow the user to view proportion of allegations by race made rather than just how many. (+0.5)</li>
           <li>Data was filtered to only include years ending in even numbers from 2000 - 2018. This was chosen to have the plot look less crowded and "cleaner". (-1.0)</li>
         </ul>
-        <br><b>Overall score:</b> +1.5
+        <br><b>Overall score:</b> +1.0
       </section>
 
       <section>
@@ -168,20 +167,21 @@
 
         <p>Design Decisions and Rationale:</p>
         <ul>
-          <li>Neutral title selected purposefully to avoid the assumption of deception. Subtitle transparently informs viewer of normalization to data. (+2.0)</li>
+          <li>Neutral title selected purposefully to avoid the assumption of deception. Subtitle transparently informs viewer of normalization to data. Both chosen to give the plot an "academic" like quality to it, I feel it was successful. (+2.0)</li>
           <li>Normalization of data intentionally selected so that proportions are viewed overall, the idea is to make each type of violence appear equal weight across racial groups. (+1.0)</li>
-          <li>Native American complaints were excluded from plot due to low counts, thus not representing all data. (-1.0)</li>
+          <li>Native American complaints were excluded from plot due to low counts, thus not representing all data. I do not think it is a noticeable decision and it is defintely deceptive. (-1.0)</li>
           <li>Categories were grouped together with broad keywords and do not discern every type of allegation included (i.e. if gun drawn was grouped with gun violence OR threat of violence). (-1.0)</li>
           <li>Missing annotations for some of the bars, intentionally left as-is due to low percentages, but this does cause the viewer to assume the proportion of each bar without a label. (-0.5)</li>
-          <li>Clear source and totals of complaints listed at bottom of the plot. (+1.0)</li>
-          <li>Color selected to elicit a calming affect on viewer, purposely selected similar colors to downplay different categories present. (-0.5)</li>
+          <li>Clear source and totals of complaints listed at bottom of the plot. This is an earnest decision and cultivates trust with the viewer through transparenct. (+1.0)</li>
         </ul>
-        <br><b>Overall score:</b> +1.0
+        <br><b>Overall score:</b> +1.5
       </section>
 
       <section>
         <h2>Final Reflection</h2>
-        <p>[WRITE FINAL REFLECTION PARAGRAPHS HERE.]</p>
+        <p>The purpose of this project is to explore how design decisions in data visualizations can shape narrative and viewer perception. I selected the Civilian Complaints Against NYPD dataset to use for this assignment, largely because I feel the subject matter is highly relevant today and is a point of major contention. For the first visualization, I created a stacked bar plot with the argument, <i>"the NYPD disproportionately uses gun violence based on racial identity". Although the dataset is based on allegations, rather than proven assaults, I chose to use emotionally charged language in the title to elicit outrage from the viewer. Although I understand outrage can dissuade viewers, when it comes to this subject matter, I believe it is not always wise to avoid emotion, especially when it serves to highlight disparity. The use of a high contrast color scheme using red and pink for Black and Hispanic Americans allows for attention to be brought to the heavy bars placed at the bottom of each stack, furthering attention to the disparity. Although the chart maintained transparent axes and normalization of data, the rhetorical framing and color associations pushed the visualization into persuasive territory. All of these deliberate stylistic choices illustrate how easily framing bias, color psychology, and selective presentation can steer interpretation even when the data itself remains truthful.</p>
+        <p>The second visualization, "Police Violence Allegations by Race" serves as a direct foil to "Trigger Happy Cops", deliberately designed to temper the narrative and present it in a neutral lens. I wanted the visual to be devoid of emotion and have an academic, almost cold emotion to the data. This was meant to be the type of visual someone would claim is "just facts" and is meant to embody the counter argument of, "the NYPD does not discriminate violence based on racial identity". Here, I normalized proportions within each racial group present and used cool, desaturated colors to communicate the idea of calm and balance. The color tones were selected to be very close, almost blending each type of violence together to create the idea of more "equal" offenses across the board. The rhetoric of the title and subtitle was intentionally factual and transparent, supported by the source citations with data totals. Some simplifications, such as the broad category groupings and the omission of low-frequency Native American data reduced granularity but prevented misleading emphasis. This plot successfully demonstrates how ethical visualization can still employ subtle persuasion through visual tone, ordering, and selective detail without crossing into blatant deception.</p>
+        <p>In conclusion, both plots reveal that persuasion in visualization often stems not just from data manipulation, but also rhetorical framing and aesthetic emphasis. While both plots are quantitatively honest overall, their emotional impact diverges largely due to color choices, language, and normalization present. Reflecting on this, I have learned a lot about how "truthful" data communication is not just about accuracy, but also contextual responsibility. This was a difficult project for me to complete in the beginning due to balancing earnestness versus deception, and at times, I was left unsure which end of the spectrum some choices were. To normalize data versus which specific shade of red elicits "danger". These responsibilities are essential for ethical data storytelling.</p>
       </section>
     </main>
   </body>
